# yet-another-server

./: .gitignore
client/: CMakeLists.txt  main.cpp
proto/: Echo.proto  Message.proto  ServerStatus.proto  Stub.proto
server/: CMakeLists.txt  ServerApplication.cpp  ServerApplication.h  ServerApplicationImpl.cpp  ServerApplicationImpl.h  ServerApplicationImpl_child.cpp  ServerApplicationImpl_helpers.cpp  StreamLog.cpp  StreamLog.h  main.cpp
server/message/: EchoMessageProcessor.cpp  EchoMessageProcessor.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageProcessorBase.h  MessageProcessorFactoryMethod.h  MessageProcessorVirtualTemplate.h  ServerStatusMessageProcessor.cpp  ServerStatusMessageProcessor.h  StubMessageProcessor.cpp  StubMessageProcessor.h
server/message/lib/: EchoMessageProcessor.fact.cpp  StubMessageProcessor.fact.cpp
